<resources>
    <string name="app_name">PingUrl</string>
    <string name="app_title">Ping Url</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_next">Next</string>
    <string name="action_back">Back</string>
    <string name="action_clearcache">Clear Cache</string>
    <string name="edit_message">Enter a URL</string>
    <string name="button_send">Ping</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_url">URL Viewer</string>
    <string name="pref_title_saved_urls_count">Saved URLs: </string>
    <string name="pref_default_saved_urls_count">5</string>
    <string name="pref_title_http_conn_precheck">HTTP PreConn</string>
    <string name="pref_title_http_conn_prefixes">HTTP Prefixes</string>
    <string-array name="empty_array"/>
    <string-array name="pref_http_prefixes">
        <item>http://</item>
        <item>http://www</item>
        <item>https://</item>
        <item>https://www</item>
    </string-array>
    <string-array name="pref_http_prefixes_values">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
</resources>
