<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.optmastr.pingurl.DisplayURLActivity">

    <item android:id="@+id/action_back"
        android:title="@string/action_back"
        android:icon="@drawable/ic_action_back"
        app:showAsAction="always" />

    <item android:id="@+id/action_next"
        android:title="@string/action_next"
        android:icon="@drawable/ic_action_next"
        app:showAsAction="always" />

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="always" />

    <item android:id="@+id/action_clearcache" android:title="@string/action_clearcache"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
